gradle build properties default value

--- a/code/customize-intellij-platform-plugin/gradle.properties
+++ b/code/customize-intellij-platform-plugin/gradle.properties
@@ -17,11 +17,12 @@ commonsLang3Version = 3.12.0
 
 # 以下为Gradle编译构建参数
 # 开启守护进程来构建，取值范围：（true、false）默认为：true
+# 停止现有守护进程：gradle --stop
 org.gradle.daemon=true
 # Gradle守护进程将在指定的空闲毫秒数后自行终止，默认为：10800000（3小时）
 org.gradle.daemon.idletimeout=10800000
-# Gradle守护进程的JVM参数，默认为：-Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xms1024m -Xmx2048m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Gradle守护进程的JVM参数，默认为：-Xms256m -Xmx512m -XX:MaxMetaspaceSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms1024m -Xmx2048m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 # 开启并行编译，取值范围：（true、false）
 org.gradle.parallel=true
 # 开启缓存，Gradle将尽可能重用任何先前构建的任务输出，从而使构建速度更快，取值范围：（true、false）
