--- a/code/spring-boot-log/pom.xml
+++ b/code/spring-boot-log/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>spring-boot-logback</module>
+        <module>spring-boot-trace</module>
     </modules>
 
     <properties>
@@ -21,6 +22,9 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring-boot.version>2.6.2</spring-boot.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <hutool-all.version>5.7.20</hutool-all.version>
+        <httpclient.version>4.5.13</httpclient.version>
     </properties>
 
     <dependencyManagement>
@@ -32,6 +36,24 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <!-- commons-io Dependencies -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+            <!-- Hutool Dependencies -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool-all.version}</version>
+            </dependency>
+            <!--HttpClient 4.5 Dependencies -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
