--- a/code/spring-boot-log/pom.xml
+++ b/code/spring-boot-log/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>spring-boot-logback</module>
         <module>spring-boot-trace</module>
+        <module>spring-boot-log4j2</module>
     </modules>
 
     <properties>
@@ -25,6 +26,7 @@
         <commons-io.version>2.11.0</commons-io.version>
         <hutool-all.version>5.7.20</hutool-all.version>
         <httpclient.version>4.5.13</httpclient.version>
+        <disruptor.version>3.4.4</disruptor.version>
     </properties>
 
     <dependencyManagement>
@@ -54,6 +56,12 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
+            </dependency>
+            <!-- log4j2异步配置 Dependencies -->
+            <dependency>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>${disruptor.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
