--- a/code/redis-tools-spring-boot-starter-tester/pom.xml
+++ b/code/redis-tools-spring-boot-starter-tester/pom.xml
@@ -10,11 +10,12 @@
     </parent>
     <groupId>com.zync</groupId>
     <artifactId>redis-tools-spring-boot-starter-tester</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${revision}</version>
     <name>redis-tools-spring-boot-starter-tester</name>
     <description>redis tools spring boot starter tester</description>
 
     <properties>
+        <revision>1.0.1</revision>
         <java.version>1.8</java.version>
     </properties>
 
@@ -27,7 +28,11 @@
         <dependency>
             <groupId>com.zync.boot</groupId>
             <artifactId>redis-tools-spring-boot-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
         <dependency>
