--- a/code/spring-security-oauth2-parent/pom.xml
+++ b/code/spring-security-oauth2-parent/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>oauth2-client</module>
         <module>oauth2-server</module>
+        <module>oauth2-resource</module>
     </modules>
 
     <description>基于最新的SpringSecurity + Oauth2集成方案</description>
