--- a/code/ftppool-spring-boot-starter-tester/pom.xml
+++ b/code/ftppool-spring-boot-starter-tester/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.zync.boot</groupId>
             <artifactId>ftppool-spring-boot-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <!--lombok-->
