--- a/notes/DNSmasq/app/docker-compose.yml
+++ b/notes/DNSmasq/app/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       HTTP_USER: admin
       HTTP_PASS: admin
     volumes:
-      - $PWD/my-dnsmasq.conf:/etc/dnsmasq.conf
-      - $PWD/my-dnsmasq.d/:/etc/dnsmasq.d/
+      - $PWD/dnsmasq.conf:/etc/dnsmasq.conf
+      - $PWD/dnsmasq.d/:/etc/dnsmasq.d/
 networks:
   mynetwork:
     driver: bridge
