--- a/notes/DNSmasq/Dockerfile
+++ b/notes/DNSmasq/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:edge
 MAINTAINER luocong2017<luocong2017@gmail.com>
 # webproc release settings
 ENV WEBPROC_VERSION 0.4.0
-ENV WEBPROC_URL https://github.com/jpillora/webproc/releases/download/$WEBPROC_VERSION/webproc_linux_amd64.gz
+ENV WEBPROC_URL https://github.com/jpillora/webproc/releases/download/v"$WEBPROC_VERSION"/webproc_"$WEBPROC_VERSION"_linux_amd64.gz
 # fetch dnsmasq and webproc binary
 RUN apk update \
 	&& apk --no-cache add dnsmasq \
