nginx docker compose

--- a/notes/DNSmasq/app/dnsmasq.conf
+++ b/notes/DNSmasq/app/dnsmasq.conf
@@ -16,5 +16,8 @@ server=114.114.115.115
 # Google DNS地址
 server=8.8.8.8
 
+# address=/website.top/10.1.1.67
+address=/website.top/192.168.3.19
+
 # 配置目录
 conf-dir=/etc/dnsmasq.d
