springboot3 http interface

--- a/code/spring-boot3-parent/pom.xml
+++ b/code/spring-boot3-parent/pom.xml
@@ -24,6 +24,7 @@
     <modules>
         <module>service-1</module>
         <module>app</module>
+        <module>http-interface</module>
     </modules>
 
 </project>
