--- a/code/spring-boot3-parent/http-interface/pom.xml
+++ b/code/spring-boot3-parent/http-interface/pom.xml
@@ -9,29 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>app</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>http-interface</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.zync</groupId>
-            <artifactId>service-1</artifactId>
-            <version>${revision}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.zync</groupId>
-            <artifactId>http-interface</artifactId>
-            <version>${revision}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
