--- a/code/java-netty/pom.xml
+++ b/code/java-netty/pom.xml
@@ -36,6 +36,11 @@
             <version>31.1-jre</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.4.5</version>
