--- a/notes/docker/docker-files/Dockerfile-PaddleOCR-1.0.0
+++ b/notes/docker/docker-files/Dockerfile-PaddleOCR-1.0.0
@@ -1,6 +1,8 @@
 # Version 1.0.0
 FROM registry.cn-hangzhou.aliyuncs.com/luocong/paddlepaddle:1.0.0
 
+MAINTAINER luocong2017<luocong2017@gmail.com>
+
 COPY PaddleOCR-2.7.0 /PaddleOCR
 
 ADD inference/ch_PP-OCRv4_det_infer.tar /PaddleOCR/inference/
