--- a/code/spring-boot-dynamic/pom.xml
+++ b/code/spring-boot-dynamic/pom.xml
@@ -17,6 +17,15 @@
         <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <cglib.version>3.3.0</cglib.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>${cglib.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
