--- a/code/mybatis-plus-ext-starter/pom.xml
+++ b/code/mybatis-plus-ext-starter/pom.xml
@@ -28,4 +28,19 @@
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
