--- a/code/mybatis-plus-ext-starter/pom.xml
+++ b/code/mybatis-plus-ext-starter/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.zync.boot</groupId>
     <artifactId>mybatis-plus-ext-starter</artifactId>
     <packaging>pom</packaging>
-    <version>${revision}</version>
+    <version>1.0.1</version>
 
     <name>mybatis-plus-ext-starter</name>
     <description>扩展Mybatis Plus功能的SpringBoot Starter</description>
@@ -17,7 +17,6 @@
     </modules>
 
     <properties>
-        <revision>1.0.1</revision>
         <java.version>21</java.version>
         <mybatis-plus.version>3.5.7</mybatis-plus.version>
         <!--plugin-->
@@ -39,6 +38,33 @@
                     <target>${java.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
+            </plugin>
+            <!--打包源码，需要的插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>${maven-install-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
