--- a/code/mybatis-plus-ext-starter-tester/pom.xml
+++ b/code/mybatis-plus-ext-starter-tester/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.3</version>
+        <version>2.7.18</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.zync.mybatisplus.tester</groupId>
@@ -13,12 +13,12 @@
     <version>${revision}</version>
 
     <name>mybatis-plus-ext-starter-tester</name>
-    <description>测试扩展Mybatis Plus批量插入功能</description>
+    <description>测试扩展Mybatis Plus功能</description>
 
     <properties>
-        <revision>1.0.0</revision>
-        <java.version>1.8</java.version>
-        <mybatis-plus.version>3.5.0</mybatis-plus.version>
+        <revision>1.0.1</revision>
+        <java.version>21</java.version>
+        <mybatis-plus.version>3.5.7</mybatis-plus.version>
         <mysql.version>8.0.18</mysql.version>
     </properties>
 
@@ -34,10 +34,10 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatis-plus.version}</version>
         </dependency>
-        <!-- mybatis plus ext -->
+        <!-- mybatis plus ext spring boot 2.x starter -->
         <dependency>
-            <groupId>com.zync.boot.mybatisplus.ext</groupId>
-            <artifactId>mybatis-plus-ext-starter</artifactId>
+            <groupId>com.zync.boot</groupId>
+            <artifactId>mybatis-plus-ext-spring-boot-2.x-starter</artifactId>
             <version>${revision}</version>
         </dependency>
 
