Mybatis Plus功能的SpringBoot 2.x Starter Tester

--- a/code/mybatis-plus-ext-starter-tester/pom.xml
+++ b/code/mybatis-plus-ext-starter-tester/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -8,64 +9,22 @@
         <version>2.7.18</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.zync.mybatisplus.tester</groupId>
+    <groupId>com.zync.boot.tester</groupId>
     <artifactId>mybatis-plus-ext-starter-tester</artifactId>
-    <version>${revision}</version>
+    <packaging>pom</packaging>
+    <version>1.0.1</version>
 
     <name>mybatis-plus-ext-starter-tester</name>
-    <description>测试扩展Mybatis Plus功能</description>
+    <description>扩展Mybatis Plus功能的SpringBoot Starter Tester</description>
+
+    <modules>
+        <module>mybatis-plus-ext-spring-boot-2.x-starter-tester</module>
+    </modules>
 
     <properties>
-        <revision>1.0.1</revision>
         <java.version>21</java.version>
         <mybatis-plus.version>3.5.7</mybatis-plus.version>
         <mysql.version>8.0.18</mysql.version>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- mybatis plus -->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>${mybatis-plus.version}</version>
-        </dependency>
-        <!-- mybatis plus ext spring boot 2.x starter -->
-        <dependency>
-            <groupId>com.zync.boot</groupId>
-            <artifactId>mybatis-plus-ext-spring-boot-2.x-starter</artifactId>
-            <version>${revision}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
