--- a/code/mybatis-plus-ext-starter/pom.xml
+++ b/code/mybatis-plus-ext-starter/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>mybatis-plus-ext-spring-boot-2.x-starter</module>
+        <module>mybatis-plus-ext-spring-boot-starter</module>
     </modules>
 
     <properties>
