--- a/code/mybatis-plus-ext-starter-tester/pom.xml
+++ b/code/mybatis-plus-ext-starter-tester/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>mybatis-plus-ext-spring-boot-2.x-starter-tester</module>
+        <module>mybatis-plus-ext-spring-boot-3.x-starter-tester</module>
         <module>mybatis-plus-ext-spring-boot-starter-tester</module>
     </modules>
 
