扩展Mybatis Plus功能的SpringBoot Starter Tester，基于注解方式二（适用于SpringBoot 2.x 和 3.x）

--- a/code/mybatis-plus-ext-starter-tester/pom.xml
+++ b/code/mybatis-plus-ext-starter-tester/pom.xml
@@ -16,6 +16,7 @@
         <module>mybatis-plus-ext-spring-boot-2.x-starter-tester</module>
         <module>mybatis-plus-ext-spring-boot-3.x-starter-tester</module>
         <module>mybatis-plus-ext-spring-boot-starter-tester</module>
+        <module>mybatis-plus-ext-spring-boot-starter-v2-tester</module>
     </modules>
 
     <properties>
