spring authorization client 调整

--- a/code/spring-authorization-server-demo/sample-demo/demo-client/src/main/resources/application.yml
+++ b/code/spring-authorization-server-demo/sample-demo/demo-client/src/main/resources/application.yml
@@ -8,6 +8,8 @@ logging:
     org.springframework.security: debug
     org.springframework.security.oauth2: debug
     org.springframework.security.oauth2.client: debug
+  pattern:
+    console: "[%highlight(%d{yyyy-MM-dd HH:mm:ss.SSS})] [%highlight(%5p)] [%highlight(${PID:- })] %clr(---){faint} [%highlight(%20.20t)] %clr(%c{50}:%L){cyan} %clr(:){faint} %m%n%wEx"
 
 spring:
   thymeleaf:
@@ -24,14 +26,14 @@ spring:
             redirect-uri: "http://127.0.0.1:8080/login/oauth2/code/{registrationId}"
             scope: openid, profile
             client-name: messaging-client-oidc
-          messaging-client-authorization-code:
-            provider: spring
-            client-id: messaging-client
-            client-secret: secret
-            authorization-grant-type: authorization_code
-            redirect-uri: "http://127.0.0.1:8080/authorized"
-            scope: message.read,message.write
-            client-name: messaging-client-authorization-code
+#          messaging-client-authorization-code:
+#            provider: spring
+#            client-id: messaging-client
+#            client-secret: secret
+#            authorization-grant-type: authorization_code
+#            redirect-uri: "http://127.0.0.1:8080/authorized"
+#            scope: message.read,message.write
+#            client-name: messaging-client-authorization-code
           messaging-client-client-credentials:
             provider: spring
             client-id: messaging-client
