--- a/code/spring-boot-webflux/pom.xml
+++ b/code/spring-boot-webflux/pom.xml
@@ -25,6 +25,18 @@
         </dependency>
 
         <dependency>
+            <groupId>io.asyncer</groupId>
+            <artifactId>r2dbc-mysql</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+        <!-- 响应式 Spring Data R2dbc-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
