--- a/code/spring-boot-webflux/src/main/resources/application.yml
+++ b/code/spring-boot-webflux/src/main/resources/application.yml
@@ -1,1 +1,11 @@
 
+spring:
+  r2dbc:
+    url: r2dbc:mysql://localhost:3306/study
+    username: root
+    password: 1qaz2wsx
+
+logging:
+  level:
+    org.springframework.r2dbc.core: debug
+
