--- a/code/spring-boot-ai-parent/pom.xml
+++ b/code/spring-boot-ai-parent/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>spring-boot-ai-hello</module>
+        <module>spring-boot-ai-chat</module>
     </modules>
 
     <properties>
