spring ai alibaba ollama chat

--- a/code/spring-boot-ai-parent/spring-boot-ai-chat/ollama-chat/pom.xml
+++ b/code/spring-boot-ai-parent/spring-boot-ai-chat/ollama-chat/pom.xml
@@ -8,26 +8,18 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>dashscope-chat</artifactId>
+    <artifactId>ollama-chat</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>com.alibaba.cloud.ai</groupId>
-            <artifactId>spring-ai-alibaba-starter</artifactId>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
