--- a/code/spring-boot-ai-parent/spring-boot-ai-chat/pom.xml
+++ b/code/spring-boot-ai-parent/spring-boot-ai-chat/pom.xml
@@ -5,33 +5,14 @@
     <parent>
         <groupId>com.zync.ai</groupId>
         <artifactId>spring-boot-ai-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>spring-boot-ai-chat</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>dashscope-chat</module>
+        <module>ollama-chat</module>
     </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.cloud.ai</groupId>
-            <artifactId>spring-ai-alibaba-starter</artifactId>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
