spring ai alibaba qwq chat

--- a/code/spring-boot-ai-parent/spring-boot-ai-chat/pom.xml
+++ b/code/spring-boot-ai-parent/spring-boot-ai-chat/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>dashscope-chat</module>
         <module>ollama-chat</module>
+        <module>qwq-chat</module>
     </modules>
 
 </project>
