--- a/code/spring-boot-ai-parent/pom.xml
+++ b/code/spring-boot-ai-parent/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>spring-boot-ai-hello</module>
         <module>spring-boot-ai-chat</module>
+        <module>spring-boot-ai-rag</module>
     </modules>
 
     <properties>
