--- a/code/spring-boot-ai-parent/pom.xml
+++ b/code/spring-boot-ai-parent/pom.xml
@@ -21,6 +21,7 @@
         <module>spring-boot-ai-chat</module>
         <module>spring-boot-ai-rag</module>
         <module>spring-boot-ai-tool-calling</module>
+        <module>spring-boot-ai-agent</module>
     </modules>
 
     <properties>
