spring ai alibaba customize tool calling

--- a/code/spring-boot-ai-parent/spring-boot-ai-tool-calling/pom.xml
+++ b/code/spring-boot-ai-parent/spring-boot-ai-tool-calling/pom.xml
@@ -12,6 +12,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>baidu-translate</module>
+        <module>customize-tool</module>
     </modules>
 
 </project>
