spring ai mcp server

--- a/code/spring-boot-ai-parent/spring-boot-ai-mcp-client/author-mcp-client/src/main/resources/application.yml
+++ b/code/spring-boot-ai-parent/spring-boot-ai-mcp-client/author-mcp-client/src/main/resources/application.yml
@@ -15,9 +15,9 @@ spring:
         request-timeout: 30s
         stdio:
           servers-configuration: classpath:/mcp-servers-config.json
-#        sse:
-#          connections:
-#            url: http://localhost:9001
+        sse:
+          connections:
+            url: http://localhost:9001
 
 
 logging:
