--- a/code/spring-boot-ai-parent/spring-boot-ai-mcp-server/author-mcp-server/pom.xml
+++ b/code/spring-boot-ai-parent/spring-boot-ai-mcp-server/author-mcp-server/pom.xml
@@ -10,5 +10,11 @@
 
     <artifactId>author-mcp-server</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-mcp-server-webmvc-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
