--- a/code/mountain-parent/pom.xml
+++ b/code/mountain-parent/pom.xml
@@ -18,10 +18,11 @@
     <properties>
         <java.version>17</java.version>
         <revision>1.0</revision>
-        <spring-boot.version>3.4.0</spring-boot.version>
-        <mybatis-plus.version>3.5.9</mybatis-plus.version>
-        <commons-io.version>2.18.0</commons-io.version>
-        <commons-collections4.version>4.4</commons-collections4.version>
+        <spring-boot.version>3.5.10</spring-boot.version>
+        <mybatis-plus.version>3.5.16</mybatis-plus.version>
+        <commons-io.version>2.21.0</commons-io.version>
+        <commons-lang3.version>3.20.0</commons-lang3.version>
+        <commons-collections4.version>4.5.0</commons-collections4.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <!--plugin-->
@@ -57,6 +58,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
