chore: 基础代码调整 #2

--- a/code/mountain-parent/pom.xml
+++ b/code/mountain-parent/pom.xml
@@ -12,7 +12,7 @@
 
     <modules>
         <module>mountain-common</module>
-        <module>mountain-user</module>
+        <module>mountain-web</module>
     </modules>
 
     <properties>
