--- a/code/mountain-parent/mountain-web/pom.xml
+++ b/code/mountain-parent/mountain-web/pom.xml
@@ -9,8 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mountain-user</artifactId>
-    <description>mountain-user</description>
+    <artifactId>mountain-web</artifactId>
+    <packaging>jar</packaging>
+    <name>mountain-web</name>
+    <description>mountain-web模块</description>
 
     <dependencies>
         <dependency>
@@ -22,6 +24,10 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
 </project>
